Complete the skeleton

--- a/resume.tex
+++ b/resume.tex
@@ -22,14 +22,72 @@
 }
 
 \begin{document}
-	\centering{\Huge \textbf{Qin Yin}}
 	
-	\vspace{0pt}
-	\centering{Mathematics \& Business - 5th Year Double Degree}
+	% Header
+	\begin{center}
+		{\Huge \textbf{Qin Yin}}
+		
+		\vspace{-3pt}
+		Mathematics \& Business - 5th Year Double Degree
+	
+		\vspace{-5pt}
+		{\small \includegraphics[scale=0.0175]{icons/phone.png} 519 - 729 - 8745 \hspace{2pt} | \hspace{2pt}
+			\href{mailto:q.yin@live.com}{\includegraphics[scale=0.0065]{icons/email.png} Q.Yin@live.com} \hspace{2pt} | \hspace{2pt} 
+			\href{https://github.com/qin-yin}{\includegraphics[scale=0.03]{icons/github.png} \hspace{0pt} qin-yin} \hspace{2pt} | \hspace{2pt} 
+			\href{https://linkedin.com/in/qinyin}{\includegraphics[scale=0.055]{icons/linkedin.png} \hspace{1pt} qinyin}}
+	\end{center}
+	
+	% Work Experience
+	\begin{flushleft}
+		{\Large \textbf{Work Experience}}
+		\rule[5pt]{\textwidth}{0.4pt}
+		\vspace{-15pt}
+		{\large\textbf{Canalyst}  \hfill \textit{Vancouver, BC}} \\
+		\vspace{15pt}
+		Software Developer \hfill \textit{Sept. 2017 - Dec. 2017}
+		\vspace{-9pt}
+		\begin{itemize}
+			\item TODO
+		\end{itemize}
 
-	\vspace{-5pt}
-	{\small \includegraphics[scale=0.0175]{icons/phone.png} 519 - 729 - 8745 \hspace{2pt} | \hspace{2pt}
-		\href{mailto:q.yin@live.com}{\includegraphics[scale=0.0065]{icons/email.png} Q.Yin@live.com} \hspace{2pt} | \hspace{2pt} 
-		\href{https://github.com/qin-yin}{\includegraphics[scale=0.03]{icons/github.png} \hspace{0pt} qin-yin} \hspace{2pt} | \hspace{2pt} 
-		\href{https://linkedin.com/in/qinyin}{\includegraphics[scale=0.055]{icons/linkedin.png} \hspace{1pt} qinyin}
+		{\large\textbf{TD Securities}  \hfill \textit{Toronto, ON}} \\
+		\vspace{1pt}
+		Sales \& Trading Associate - Global Equity Derivatives \hfill \textit{Dec. 2016 - Apr. 2017}
+		\vspace{-9pt}
+		\begin{itemize}
+			\item TODO
+		\end{itemize}
+	
+		{\large\textbf{Scotiabank}  \hfill \textit{Toronto, ON}} \\
+		\vspace{1pt}
+		Co-op Associate \hfill \textit{Jan. 2016 - Apr. 2016}
+		\vspace{-9pt}
+		\begin{itemize}
+			\item TODO
+		\end{itemize}
+	\end{flushleft}
+
+	% Education
+	\begin{flushleft}
+		{\Large \textbf{Education}}
+		\rule[5pt]{\textwidth}{0.4pt}
+	\end{flushleft}
+
+	% Projects
+	\begin{flushleft}
+		{\Large \textbf{Projects}}
+		\rule[5pt]{\textwidth}{0.4pt}
+	\end{flushleft}
+	
+	% Skills
+	\begin{flushleft}
+		{\Large \textbf{Skills}}
+		\rule[5pt]{\textwidth}{0.4pt}
+	\end{flushleft}
+
+	% Extra
+	\begin{flushleft}
+		{\Large \textbf{Extracurriculars}}
+		\rule[5pt]{\textwidth}{0.4pt}
+	\end{flushleft}
 \end{document}
