Flesh out the skeleton

--- a/resume.tex
+++ b/resume.tex
@@ -42,7 +42,7 @@
 		{\Large \textbf{Work Experience}}
 		\rule[5pt]{\textwidth}{0.4pt}
 		\vspace{-15pt}
-		{\large\textbf{Canalyst}  \hfill \textit{Vancouver, BC}} \\
+		{\large\textbf{Canalyst}}  \hfill \textit{Vancouver, BC} \\
 		\vspace{15pt}
 		Software Developer \hfill \textit{Sept. 2017 - Dec. 2017}
 		\vspace{-9pt}
@@ -50,7 +50,7 @@
 			\item TODO
 		\end{itemize}
 
-		{\large\textbf{TD Securities}  \hfill \textit{Toronto, ON}} \\
+		{\large\textbf{TD Securities}}  \hfill \textit{Toronto, ON} \\
 		\vspace{1pt}
 		Sales \& Trading Associate - Global Equity Derivatives \hfill \textit{Dec. 2016 - Apr. 2017}
 		\vspace{-9pt}
@@ -58,7 +58,7 @@
 			\item TODO
 		\end{itemize}
 	
-		{\large\textbf{Scotiabank}  \hfill \textit{Toronto, ON}} \\
+		{\large\textbf{Scotiabank}}  \hfill \textit{Toronto, ON} \\
 		\vspace{1pt}
 		Co-op Associate \hfill \textit{Jan. 2016 - Apr. 2016}
 		\vspace{-9pt}
@@ -71,23 +71,39 @@
 	\begin{flushleft}
 		{\Large \textbf{Education}}
 		\rule[5pt]{\textwidth}{0.4pt}
+		{\large \textbf{University of Waterloo \& Wilfrid Laurier University}} \hfill \textit{Waterloo, ON}\\
+		Bachelor of Mathematics (BMath) \& Bachelor of Business Administration (BBA) \hfill \textit{Sept. 2013 - Expected Dec. 2018}
+		\vspace{-7.5pt}
+		\begin{itemize}
+			\item Statistics Major and Computer Science Minor (UW) \& Finance Major (WLU) \vspace{-3pt}
+			\item \textbf{Cumulative GPA:} 3.9/4.0 (91\%) \vspace{-3pt}
+			\item \textbf{Relevant Courses:} Object-Oriented Development, Data Types \& Structures, Optimization and Numerical Computation \vspace{-3pt}
+			\item \textbf{Honors:} Dean's Honor Roll (every term), President's Gold Scholarship
+		\end{itemize}
 	\end{flushleft}
 
 	% Projects
 	\begin{flushleft}
 		{\Large \textbf{Projects}}
 		\rule[5pt]{\textwidth}{0.4pt}
+		\textbf{Rubberduck:}\\
+		\textbf{Translink Bot:}\\
+		\textbf{Time the Market:}\\
+		\textbf{Monopoly:}
 	\end{flushleft}
 	
 	% Skills
 	\begin{flushleft}
 		{\Large \textbf{Skills}}
 		\rule[5pt]{\textwidth}{0.4pt}
+		\textbf{Languages:} Python, C, C++, C\#, SQL, MATLAB, VBA, JavaScript, Bash scripting\\
+		\textbf{Tools \& Technologies:} Git, Docker, Linux, GitLab CI/CD, Heroku
 	\end{flushleft}
 
 	% Extra
 	\begin{flushleft}
 		{\Large \textbf{Extracurriculars}}
 		\rule[5pt]{\textwidth}{0.4pt}
+		
 	\end{flushleft}
 \end{document}
