Complete the project section

--- a/resume.tex
+++ b/resume.tex
@@ -6,6 +6,7 @@
 \usepackage[hidelinks=true]{hyperref}
 
 \geometry{left=1.4cm, top=1.5cm, right=1.4cm, bottom=1.8cm, footskip=.5cm}
+\pagenumbering{gobble}
 
 \fontfamily{roboto}\selectfont
 
@@ -32,7 +33,7 @@
 	
 		\vspace{-5pt}
 		{\small \includegraphics[scale=0.0175]{icons/phone.png} 519 - 729 - 8745 \hspace{2pt} | \hspace{2pt}
-			\href{mailto:q.yin@live.com}{\includegraphics[scale=0.0065]{icons/email.png} Q.Yin@live.com} \hspace{2pt} | \hspace{2pt} 
+			\href{mailto:q.yin@live.com}{\includegraphics[scale=0.0065]{icons/email.png} q.yin@live.com} \hspace{2pt} | \hspace{2pt} 
 			\href{https://github.com/qin-yin}{\includegraphics[scale=0.03]{icons/github.png} \hspace{0pt} qin-yin} \hspace{2pt} | \hspace{2pt} 
 			\href{https://linkedin.com/in/qinyin}{\includegraphics[scale=0.055]{icons/linkedin.png} \hspace{1pt} qinyin}}
 	\end{center}
@@ -44,10 +45,12 @@
 		\vspace{-15pt}
 		{\large\textbf{Canalyst}}  \hfill \textit{Vancouver, BC} \\
 		\vspace{15pt}
-		Software Developer \hfill \textit{Sept. 2017 - Dec. 2017}
+		Co-op Software Developer \hfill \textit{Sept. 2017 - Dec. 2017}
 		\vspace{-9pt}
 		\begin{itemize}
-			\item TODO
+			\item excel add-in \vspace{-3pt}
+			\item Compare \vspace{-3pt}
+			\item GitLab CI/CD
 		\end{itemize}
 
 		{\large\textbf{TD Securities}}  \hfill \textit{Toronto, ON} \\
@@ -55,7 +58,9 @@
 		Sales \& Trading Associate - Global Equity Derivatives \hfill \textit{Dec. 2016 - Apr. 2017}
 		\vspace{-9pt}
 		\begin{itemize}
-			\item TODO
+			\item Rebuilt and redesigned existing tools to generate term sheets and marketing materials for TD Equity-linked Notes using Excel and VBA, increasing speed by 80\% and reducing errors by 50\%. \vspace{-3pt}
+			\item Expanded report-generating system using SQL and JavaScript, improving analytics on sales and client holdings. \vspace{-3pt}
+			\item Provided backtesting of Note performance to Sales to aid with client pitches.
 		\end{itemize}
 	
 		{\large\textbf{Scotiabank}}  \hfill \textit{Toronto, ON} \\
@@ -63,7 +68,8 @@
 		Co-op Associate \hfill \textit{Jan. 2016 - Apr. 2016}
 		\vspace{-9pt}
 		\begin{itemize}
-			\item TODO
+			\item Designed and developed database application to perform quarterly Enterprise Stress Tests, used by Scotiabank to perform Stress Tests on retail and wholesale credit portfolios in Q2 2016.\vspace{-3pt}
+			\item Assisted with the modeling and projection of default rates of Scotiabank's domestic retail credit portfolios. 
 		\end{itemize}
 	\end{flushleft}
 
@@ -86,10 +92,10 @@
 	\begin{flushleft}
 		{\Large \textbf{Projects}}
 		\rule[5pt]{\textwidth}{0.4pt}
-		\textbf{Rubberduck:}\\
-		\textbf{Translink Bot:}\\
-		\textbf{Time the Market:}\\
-		\textbf{Monopoly:}
+		\textbf{Rubberduck:} Open Source Contributor to Rubberduck, a COM add-in for the Visual Basic Editor (VBE). Helped improve tools to modernize the VBE, including a unit-testing framework, static analysis for code and quick-fixes for potential code issues.\\
+		\textbf{Translink Bot:} Implemented a Facebook Messenger bot to provide real-time bus information using Node.js.\\
+		\textbf{Time the Market:} Built a game in Python, using matplotlib, to test player's ability to outperform the market.\\
+		\textbf{Monopoly:} Created a University of Waterloo-related Monopoly game in C++, using Object-Oriented principles and design patterns.
 	\end{flushleft}
 	
 	% Skills
