Completed first edition of resume

--- a/resume.tex
+++ b/resume.tex
@@ -48,9 +48,11 @@
 		Co-op Software Developer \hfill \textit{Sept. 2017 - Dec. 2017}
 		\vspace{-9pt}
 		\begin{itemize}
-			\item excel add-in \vspace{-3pt}
-			\item Compare \vspace{-3pt}
-			\item GitLab CI/CD
+			\item Developed a VSTO add-in for Excel in C\#, providing tools for Equity Research Associates in building financial models.\vspace{-3pt}
+			\item Created a tool in C\# \& VBA to compare earnings updates to models, improving accuracy and speed by 120\%.\vspace{-3pt}
+			\item Implemented a variety of QA checks to catch common mistakes in models, reducing errors and saving time. \vspace{-3pt}
+			\item Wrote ad-hoc macros in C\# to make changes and check for errors on database of 3600+ financial models. \vspace{-3pt}
+			\item Configured team projects to automatically build, test and deploy updates using Docker containers and GitLab CI/CD.
 		\end{itemize}
 
 		{\large\textbf{TD Securities}}  \hfill \textit{Toronto, ON} \\
@@ -93,9 +95,9 @@
 		{\Large \textbf{Projects}}
 		\rule[5pt]{\textwidth}{0.4pt}
 		\textbf{Rubberduck:} Open Source Contributor to Rubberduck, a COM add-in for the Visual Basic Editor (VBE). Helped improve tools to modernize the VBE, including a unit-testing framework, static analysis for code and quick-fixes for potential code issues.\\
-		\textbf{Translink Bot:} Implemented a Facebook Messenger bot to provide real-time bus information using Node.js.\\
+		\textbf{Translink Bot:} Implemented a Facebook Messenger bot using Node.js to provide real-time transit arrival information for the Vancouver public transit system.\\
 		\textbf{Time the Market:} Built a game in Python, using matplotlib, to test player's ability to outperform the market.\\
-		\textbf{Monopoly:} Created a University of Waterloo-related Monopoly game in C++, using Object-Oriented principles and design patterns.
+		\textbf{Monopoly:} Created a University of Waterloo-based Monopoly game in C++, using OOP principles and design patterns.
 	\end{flushleft}
 	
 	% Skills
@@ -108,8 +110,10 @@
 
 	% Extra
 	\begin{flushleft}
-		{\Large \textbf{Extracurriculars}}
+		{\Large \textbf{Extracurriculars \& Other Experience}}
 		\rule[5pt]{\textwidth}{0.4pt}
-		
+		\textbf{Interests:} Toronto Raptors, APBRmetrics, Chess and Poker\\
+		\textbf{Extracurriculars:} University of Waterloo Orientation-Week Leader, Vice-President of the Double Degree Club\\
+		\textbf{Teaching Experience:} Linear Algebra II TA - University of Waterloo, Business 101 TA - Wilfrid Laurier University
 	\end{flushleft}
 \end{document}
