Make wording changes to Work Experience

--- a/resume.tex
+++ b/resume.tex
@@ -48,10 +48,10 @@
 		Co-op Software Developer \hfill \textit{Sept. 2017 - Dec. 2017}
 		\vspace{-9pt}
 		\begin{itemize}
-			\item Developed a VSTO add-in for Excel in C\#, providing tools for Equity Research Associates in building financial models.\vspace{-3pt}
+			\item Developed a VSTO add-in for Excel in C\#, providing tools and shortcuts to aid with building financial models.\vspace{-3pt}
 			\item Created a tool in C\# \& VBA to compare earnings updates to models, improving accuracy and speed by 120\%.\vspace{-3pt}
-			\item Implemented a variety of QA checks to catch common mistakes in models, reducing errors and saving time. \vspace{-3pt}
-			\item Wrote ad-hoc macros in C\# to make changes and check for errors on database of 3600+ financial models. \vspace{-3pt}
+			\item Implemented a variety of QA checks to find common mistakes in models, reducing errors and saving time. \vspace{-3pt}
+			\item Wrote ad-hoc macros in C\# to make changes to and check for errors on database of 3600+ financial models. \vspace{-3pt}
 			\item Configured team projects to automatically build, test and deploy updates using Docker containers and GitLab CI/CD.
 		\end{itemize}
 
