Fix wording in Projects section

--- a/resume.tex
+++ b/resume.tex
@@ -94,7 +94,7 @@
 	\begin{flushleft}
 		{\Large \textbf{Projects}}
 		\rule[5pt]{\textwidth}{0.4pt}
-		\textbf{Rubberduck:} Open Source Contributor to Rubberduck, a COM add-in for the Visual Basic Editor (VBE). Helped improve tools to modernize the VBE, including a unit-testing framework, static analysis for code and quick-fixes for potential code issues.\\
+		\textbf{Rubberduck:} Open Source Contributor to Rubberduck, a COM add-in for the Visual Basic Editor (VBE). Helped improve tools to modernize the VBE, including a unit-testing framework, static analysis of code and quick-fixes for potential code issues.\\
 		\textbf{Translink Bot:} Implemented a Facebook Messenger bot using Node.js to provide real-time transit arrival information for the Vancouver public transit system.\\
 		\textbf{Time the Market:} Built a game in Python, using matplotlib, to test player's ability to outperform the market.\\
 		\textbf{Monopoly:} Created a University of Waterloo-based Monopoly game in C++, using OOP principles and design patterns.
