--- a/resume.tex
+++ b/resume.tex
@@ -62,7 +62,7 @@
 		\begin{itemize}
 			\item Rebuilt and redesigned existing tools to generate term sheets and marketing materials for TD Equity-linked Notes using Excel and VBA, increasing speed by 80\% and reducing errors by 50\%. \vspace{-3pt}
 			\item Expanded report-generating system using SQL and JavaScript, improving analytics on sales and client holdings. \vspace{-3pt}
-			\item Provided backtesting of Note performance to Sales to aid with client pitches.
+			\item Provided historical testing of Note performance to Sales Team to aid with client pitches.
 		\end{itemize}
 	
 		{\large\textbf{Scotiabank}}  \hfill \textit{Toronto, ON} \\
