--- a/resume.tex
+++ b/resume.tex
@@ -49,7 +49,7 @@
 		\begin{itemize}
 			\item Statistics Major and Computer Science Minor (UW) \& Finance Major (WLU) \vspace{-3pt}
 			\item \textbf{Cumulative GPA:} 3.9/4.0 (91\%) \vspace{-3pt}
-			\item \textbf{Relevant Courses:} Object-Oriented Development, Data Types \& Structures, Optimization and Numerical Computation \vspace{-3pt}
+			\item \textbf{Relevant Courses:} Object-Oriented Development, Data Types \& Structures, Networks and Numerical Computation \vspace{-3pt}
 			\item \textbf{Honors:} Dean's Honor Roll (every term), President's Gold Scholarship
 		\end{itemize}
 	\end{flushleft}
@@ -73,7 +73,7 @@
 
 		{\large\textbf{TD Securities}}  \hfill \textit{Toronto, ON} \\
 		\vspace{1pt}
-		Sales \& Trading Associate - Global Equity Derivatives \hfill \textit{Dec. 2016 - Apr. 2017}
+		Co-op Sales \& Trading Associate\hfill \textit{Dec. 2016 - Apr. 2017}
 		\vspace{-9pt}
 		\begin{itemize}
 			\item Rebuilt and redesigned existing tools to generate term sheets and marketing materials for TD Equity-linked Notes using Excel and VBA, increasing speed by 80\% and reducing errors by 50\%. \vspace{-3pt}
@@ -114,7 +114,6 @@
 		{\Large \textbf{Extracurriculars \& Other Experience}}
 		\rule[5pt]{\textwidth}{0.4pt}
 		\textbf{Interests:} Toronto Raptors, APBRmetrics, Chess and Poker\\
-		\textbf{Extracurriculars:} University of Waterloo Orientation-Week Leader, Vice-President of the Double Degree Club\\
-		\textbf{Teaching Experience:} Linear Algebra II TA - University of Waterloo, Business 101 TA - Wilfrid Laurier University
+		\textbf{Extracurriculars:} University of Waterloo Orientation-Week Leader, Vice-President of the Double Degree Club
 	\end{flushleft}
 \end{document}
