--- a/resume.tex
+++ b/resume.tex
@@ -45,7 +45,7 @@
 		\rule[5pt]{\textwidth}{0.4pt}
 		{\large \textbf{University of Waterloo \& Wilfrid Laurier University}} \hfill \textit{Waterloo, ON}\\
 		Bachelor of Mathematics (BMath) \& Bachelor of Business Administration (BBA) \hfill \textit{Sept. 2013 - Expected Dec. 2018}
-		\vspace{-7.5pt}
+		\vspace{-9pt}
 		\begin{itemize}
 			\item Statistics Major and Computer Science Minor (UW) \& Finance Major (WLU) \vspace{-3pt}
 			\item \textbf{Cumulative GPA:} 3.9/4.0 (91\%) \vspace{-3pt}
@@ -65,7 +65,7 @@
 		\vspace{-9pt}
 		\begin{itemize}
 			\item Developed a VSTO add-in for Excel in C\#, providing tools and shortcuts to aid with building financial models.\vspace{-3pt}
-			\item Created a tool in C\# \& VBA to compare earnings updates to models, improving accuracy and speed by 120\%.\vspace{-3pt}
+			\item Created a tool in C\# to compare updates to models, improving accuracy and speed by 120\%.\vspace{-3pt}
 			\item Implemented a variety of QA checks to find common mistakes in models, reducing errors and saving time. \vspace{-3pt}
 			\item Wrote ad-hoc macros in C\# to make changes to and check for errors on database of 3600+ financial models. \vspace{-3pt}
 			\item Configured team projects to automatically build, test and deploy updates using Docker containers and GitLab CI/CD.
@@ -97,7 +97,7 @@
 		\rule[5pt]{\textwidth}{0.4pt}
 		\textbf{Rubberduck:} Open Source Contributor to Rubberduck, a COM add-in for the Visual Basic Editor (VBE). Helped improve tools to modernize the VBE, including a unit-testing framework, static analysis of code and quick-fixes for potential code issues.\\
 		\textbf{Translink Bot:} Implemented a Facebook Messenger bot using Node.js to provide real-time transit arrival information for the Vancouver public transit system.\\
-		\textbf{Time the Market:} Built a game in Python, using matplotlib, to test player's ability to outperform the market.\\
+		\textbf{Time the Market:} Built a game in Python, using matplotlib and pandas, to test player's ability to outperform the market.\\
 		\textbf{Monopoly:} Created a University of Waterloo-based Monopoly game in C++, using OOP principles and design patterns.
 	\end{flushleft}
 	
