Revamped Skills section

--- a/resume.tex
+++ b/resume.tex
@@ -38,7 +38,7 @@
 			\href{https://linkedin.com/in/qinyin}{\includegraphics[scale=0.055]{icons/linkedin.png} \hspace{1pt} qinyin}}
 	\end{center}
 	
-	
+	 
 	% Education
 	\begin{flushleft}
 		{\Large \textbf{Education}}
@@ -103,15 +103,16 @@
 	
 	% Skills
 	\begin{flushleft}
-		{\Large \textbf{Skills}}
+		{\Large \textbf{Languages \& Technologies}}
 		\rule[5pt]{\textwidth}{0.4pt}
-		\textbf{Languages:} Python, C, C++, C\#, SQL, MATLAB, VBA, JavaScript, Bash scripting\\
-		\textbf{Tools \& Technologies:} Git, Docker, Linux, GitLab CI/CD, Heroku
+		\textbf{Proficient in} Python, C\#, SQL, VBA, Bash, \LaTeX Bash; Git, GitLab CI/CD\\
+		\textbf{Familiar with} C/C++, MATLAB, JavaScript; Linux \\
+		\textbf{Exploring} HTML, CSS; Docker, Linux, Heroku
 	\end{flushleft}
 
 	% Extra
 	\begin{flushleft}
-		{\Large \textbf{Extracurriculars \& Other Experience}}
+		{\Large \textbf{Interests \& Extracurriculars}}
 		\rule[5pt]{\textwidth}{0.4pt}
 		\textbf{Interests:} Toronto Raptors, APBRmetrics, Chess and Poker\\
 		\textbf{Extracurriculars:} University of Waterloo Orientation-Week Leader, Vice-President of the Double Degree Club
