Made small improvements to wording and overall structure

--- a/resume.tex
+++ b/resume.tex
@@ -76,8 +76,8 @@
 		Co-op Sales \& Trading Associate\hfill \textit{Dec. 2016 - Apr. 2017}
 		\vspace{-9pt}
 		\begin{itemize}
-			\item Rebuilt and redesigned existing tools to generate term sheets and marketing materials for TD Equity-linked Notes using Excel and VBA, increasing speed by 80\% and reducing errors by 50\%. \vspace{-3pt}
-			\item Expanded report-generating system using SQL and JavaScript, improving analytics on sales and client holdings. \vspace{-3pt}
+			\item Rebuilt and redesigned existing tools to automatically generate legal and marketing materials for TD Equity-linked Notes using Excel and VBA, increasing speed by 80\% and reducing errors by 50\%. \vspace{-3pt}
+			\item Expanded report-generating server using SQL and JavaScript, improving analytics on sales and client holdings. \vspace{-3pt}
 			\item Provided historical testing of Note performance to Sales Team to aid with client pitches.
 		\end{itemize}
 	
@@ -95,7 +95,7 @@
 	\begin{flushleft}
 		{\Large \textbf{Projects}}
 		\rule[5pt]{\textwidth}{0.4pt}
-		\textbf{Rubberduck:} Open Source Contributor to Rubberduck, a COM add-in for the Visual Basic Editor (VBE). Helped improve tools to modernize the VBE, including a unit-testing framework, static analysis of code and quick-fixes for potential code issues.\\
+		\textbf{Rubberduck:} Open Source Contributor to Rubberduck, an extension to the Visual Basic Editor (VBE). Implemented features in C\# to modernize the VBE, such as a unit-testing framework, static code analysis and quick-fixes for potential code issues.\\
 		\textbf{Translink Bot:} Implemented a Facebook Messenger bot using Node.js to provide real-time transit arrival information for the Vancouver public transit system.\\
 		\textbf{Time the Market:} Built a game in Python, using matplotlib and pandas, to test player's ability to outperform the market.\\
 		\textbf{Monopoly:} Created a University of Waterloo-based Monopoly game in C++, using OOP principles and design patterns.
@@ -105,9 +105,9 @@
 	\begin{flushleft}
 		{\Large \textbf{Languages \& Technologies}}
 		\rule[5pt]{\textwidth}{0.4pt}
-		\textbf{Proficient in} Python, C\#, SQL, VBA, Bash, \LaTeX Bash; Git, GitLab CI/CD\\
-		\textbf{Familiar with} C/C++, MATLAB, JavaScript; Linux \\
-		\textbf{Exploring} HTML, CSS; Docker, Linux, Heroku
+		\textbf{Proficient with} Python, C++, C\#, SQL, VBA, Bash, \LaTeX; Git, GitLab CI/CD\\
+		\textbf{Familiar with} C, MATLAB, JavaScript; Linux \\
+		\textbf{Exploring} Java, HTML, CSS; Docker, Heroku, AWS
 	\end{flushleft}
 
 	% Extra
