Adds R as a skill

--- a/resume.tex
+++ b/resume.tex
@@ -106,7 +106,7 @@
 		{\Large \textbf{Languages \& Technologies}}
 		\rule[5pt]{\textwidth}{0.4pt}
 		\textbf{Proficient with} Python, C++, C\#, SQL, VBA, Bash, \LaTeX; Git, GitLab CI/CD\\
-		\textbf{Familiar with} C, MATLAB, JavaScript; Linux \\
+		\textbf{Familiar with} C, R, MATLAB, JavaScript; Linux \\
 		\textbf{Exploring} Java, HTML, CSS; Docker, Heroku, AWS
 	\end{flushleft}
 
