Change grad date and job title

--- a/resume.tex
+++ b/resume.tex
@@ -44,7 +44,7 @@
 		{\Large \textbf{Education}}
 		\rule[5pt]{\textwidth}{0.4pt}
 		{\large \textbf{University of Waterloo \& Wilfrid Laurier University}} \hfill \textit{Waterloo, ON}\\
-		Bachelor of Mathematics (BMath) \& Bachelor of Business Administration (BBA) \hfill \textit{Sept. 2013 - Expected Dec. 2018}
+		Bachelor of Mathematics (BMath) \& Bachelor of Business Administration (BBA) \hfill \textit{Sept. 2013 - Expected Aug. 2018}
 		\vspace{-9pt}
 		\begin{itemize}
 			\item Statistics Major and Computer Science Minor (UW) \& Finance Major (WLU) \vspace{-3pt}
@@ -61,7 +61,7 @@
 		\vspace{-15pt}
 		{\large\textbf{Canalyst}}  \hfill \textit{Vancouver, BC} \\
 		\vspace{15pt}
-		Co-op Software Developer \hfill \textit{Sept. 2017 - Dec. 2017}
+		Co-op Software Engineer \hfill \textit{Sept. 2017 - Dec. 2017}
 		\vspace{-9pt}
 		\begin{itemize}
 			\item Developed a VSTO add-in for Excel in C\#, providing tools and shortcuts to aid with building financial models.\vspace{-3pt}
